fixing the issue where homepage title got clipped

--- a/Resources/css/landing_page.css
+++ b/Resources/css/landing_page.css
@@ -26,7 +26,9 @@ h1 {
 
 .container {
     width: 80%;
+    position: absolute;
     padding: 20px;
+    margin-top: 60px;
     background: rgba(0, 0, 0, 0.8); /* Semi-transparent dark background */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
